--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#">Find Kokoa Account or Password</a>
     </form>
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <span>Your screen is too big ㅠㅠㅠ</span>
     </div>
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
